--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           </svg>
         </button>
       </div>
-      <div class="mobile-menu is-open">
+      <div class="mobile-menu">
         <div class="container mobile-menu-container">
           <button class="mobile-menu-close">
             <svg class="mobile-btn-close" width="8" height="8">
@@ -98,28 +98,28 @@
             <ul class="mobile-icon-list">
               <li class="mobile-icon-item">
                 <a href="" class="mobile-icon-link">
-                  <svg class="mobile-icon-icon" width="16" height="16">
+                  <svg class="mobile-icon-icon" width="24" height="24">
                     <use href="./images/icons.svg#icon-instagram"></use>
                   </svg>
                 </a>
               </li>
               <li class="mobile-icon-item">
                 <a href="" class="mobile-icon-link">
-                  <svg class="mobile-icon-icon" width="16" height="16">
+                  <svg class="mobile-icon-icon" width="24" height="24">
                     <use href="./images/icons.svg#icon-twitter"></use>
                   </svg>
                 </a>
               </li>
               <li class="mobile-icon-item">
                 <a href="" class="mobile-icon-link">
-                  <svg class="mobile-icon-icon" width="16" height="16">
+                  <svg class="mobile-icon-icon" width="24" height="24">
                     <use href="./images/icons.svg#icon-facebook"></use>
                   </svg>
                 </a>
               </li>
               <li class="mobile-icon-item">
                 <a href="" class="mobile-icon-link">
-                  <svg class="mobile-icon-icon" width="16" height="16">
+                  <svg class="mobile-icon-icon" width="24" height="24">
                     <use href="./images/icons.svg#icon-linkedin"></use>
                   </svg>
                 </a>
@@ -138,7 +138,7 @@
         </div>
       </section>
 
-      <section class="main-list-tools hidden">
+      <section class="main-list-tools">
         <div class="container">
           <h2 class="visually-hidden">Business tools</h2>
           <ul class="main-list">
@@ -195,12 +195,13 @@
         </div>
       </section>
 
-      <section class="main-team hidden">
+      <section class="main-team">
         <div class="container">
           <h2 class="main-team-tytle">Our Team</h2>
           <ul class="team-list">
             <li class="main-team-list">
               <img
+                class="team-img"
                 srcset="./images/team-1.jpg 1x, ./images/team-1@2x.jpg 2x"
                 src="./images/team-1.jpg"
                 alt="Mark Guerrero"
@@ -245,6 +246,7 @@
 
             <li class="main-team-list">
               <img
+                class="team-img"
                 srcset="./images/team-2.jpg 1x, ./images/team-2@2x.jpg 2x"
                 src="./images/team-2.jpg"
                 alt="Tom Ford"
@@ -290,6 +292,7 @@
 
             <li class="main-team-list">
               <img
+                class="team-img"
                 srcset="./images/team-3.jpg 1x, ./images/team-3@2x.jpg 2x"
                 src="./images/team-3.jpg"
                 alt="Camila Garcia"
@@ -335,6 +338,7 @@
 
             <li class="main-team-list">
               <img
+                class="team-img"
                 srcset="./images/team-4.jpg 1x, ./images/team-4@2x.jpg 2x"
                 src="./images/team-4.jpg"
                 alt="Daniel Wilson"
@@ -381,7 +385,7 @@
         </div>
       </section>
 
-      <section class="main-portfolio hidden">
+      <section class="main-portfolio">
         <div class="container">
           <h2 class="main-portfolio-tytle">Our Portfolio</h2>
           <ul class="portfolio-list">
@@ -656,7 +660,7 @@
         </div>
       </section>
     </main>
-    <footer class="page-footer hidden">
+    <footer class="page-footer">
       <div class="container footer-container">
         <div class="footer-logo-conteiner">
           <a class="logo footer-logo" href="./index.html"
