--- a/index.html
+++ b/index.html
@@ -727,7 +727,7 @@
         </div>
       </div>
     </footer>
-    <div class="backdrop hidden">
+    <div class="backdrop is-open">
       <div class="modal">
         <button type="button" class="modal-btn-close">
           <svg class="btn-close" width="8" height="8">
@@ -800,9 +800,12 @@
               ><span class="privacy-link">
                 <svg width="10" height="8">
                   <use href="./images/icons.svg#icon-Vector"></use>
-                </svg> </span
-              >I accept the terms and conditions of the
-              <a class="signeup-privacy" href="">Privacy Policy</a>
+                </svg>
+              </span>
+              <span class="privacy-policy-link">
+                I accept the terms and conditions of the
+                <a class="signeup-privacy" href="">Privacy Policy</a>
+              </span>
             </label>
           </div>
           <button type="submit" class="modal-send">Send</button>
