--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           </svg>
         </button>
       </div>
-      <div class="mobile-menu">
+      <div class="mobile-menu is-open">
         <div class="container mobile-menu-container">
           <button class="mobile-menu-close">
             <svg class="mobile-btn-close" width="8" height="8">
@@ -83,7 +83,7 @@
           <address class="mobile-contacts">
             <ul class="mobile-contacts-list">
               <li class="mobile-contacts-item">
-                <a class="mobile-contacts-link" href="tel:+110001111111"
+                <a class="mobile-contacts-link " href="tel:+110001111111"
                   >+11 (000) 111-11-11</a
                 >
               </li>
@@ -727,7 +727,7 @@
         </div>
       </div>
     </footer>
-    <div class="backdrop is-open">
+    <div class="backdrop ">
       <div class="modal">
         <button type="button" class="modal-btn-close">
           <svg class="btn-close" width="8" height="8">
